[package]
name = "rtf2pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
encoding_rs = "0.8.33"
nanoid = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
tera = "1.19.1"
